--- a/src/data/levels/02_Assembly/08_Addressing modes (3-3)/chat/en.yml
+++ b/src/data/levels/02_Assembly/08_Addressing modes (3-3)/chat/en.yml
@@ -50,7 +50,7 @@ step4:
   - we've set up the memory for indirect addressing
   - in the address $0003, we have an $80
   - in the address $0004, we have a $40
-  - now I'll switch the Memory Viewer to the usual section
+  - now I'll switch the <Memory Viewer> to the usual section
   - run the other 3 instructions ⏩
   events:
   - step [step5]
