--- a/src/data/levels/05a_CPU/15_Execute/chat/en.yml
+++ b/src/data/levels/05a_CPU/15_Execute/chat/en.yml
@@ -3,7 +3,7 @@ main:
   messages:
   - let's implement a `step()` method that runs the next <operation>
   - it will read the next opcode and arguments from 🤖  <PRG-ROM>
-  - call the right <instruction> and <addressing mode>
+  - call the right instruction and addressing mode
   - and increment the cycle counters
   responses:
   - you promised you'd explain cycles 🚲 [cycles]
