--- a/src/data/levels/02_Assembly/06_Addressing modes (1-3)/chat/es.yml
+++ b/src/data/levels/02_Assembly/06_Addressing modes (1-3)/chat/es.yml
@@ -10,7 +10,7 @@ main:
       });
     }
   messages:
-  - por si no te diste cuenta, todas las instrucciones toman uno o cero argumentos
+  - por si no te diste cuenta, todas las instrucciones toman uno o cero <argumentos>
   - y una instrucción compilada puede ocupar 1, 2 o 3 bytes
   - <{compilation_full.png}>
   responses:
@@ -21,7 +21,7 @@ why:
     set((m) => m.$canRun = true);
   messages:
   - hay varias formas de referirse estos argumentos
-  - y se llaman "modos de direccionamiento"
+  - y se llaman modos de direccionamiento
   - corre la primer instrucción ⏩
   events:
   - step [implicit]
@@ -49,7 +49,7 @@ immediate:
     set((m) => m.$canRun = true);
   messages:
   - "aquí, `LDA #$08` toma 1 byte como argumento, por lo que ocupa 2 bytes"
-  - el "código de operación" (<opcode>) y el 8
+  - el "código de operación" (opcode) y el 8
   - esto es el modo de direccionamiento "Immediate"
   - donde el argumento es un byte <literal>
   - sigue ⏩
