--- a/src/data/levels/05a_CPU/14_Operations/chat/en.yml
+++ b/src/data/levels/05a_CPU/14_Operations/chat/en.yml
@@ -1,9 +1,9 @@
 ---
 main:
   messages:
-  - "\"opcode\" stands for \"operation code\""
+  - "opcode stands for \"operation code\""
   - so... what's an <operation>? 🤔
-  - it's the combination of an 📖  <instruction> and an 📍  <addressing mode>
+  - it's the combination of an 📖  instruction and an 📍  addressing mode
   - "let's list some examples:"
   - |-
     `STA $4080`: the `STA` instruction + the `ABSOLUTE` mode
