--- a/src/data/levels/02_Assembly/06_Addressing modes (1-3)/chat/es.yml
+++ b/src/data/levels/02_Assembly/06_Addressing modes (1-3)/chat/es.yml
@@ -149,7 +149,17 @@ step4:
   - <{JMP_indirect.png}>
   - creando un bucle infinito ⏩
   events:
-  - step [exercise]
+  - step [seeit]
+
+seeit:
+  run: |
+    set((m) => m.$canRun = false);
+  run-after-messages: |
+    set((m) => m.$canRun = true);
+  messages:
+  - ¿lo ves? saltó, y ahora [PC] apunta a $4021
+  responses:
+  - ya veo [exercise]
 
 exercise:
   run: |
