--- a/src/data/levels/02_Assembly/10_Subroutines/chat/en.yml
+++ b/src/data/levels/02_Assembly/10_Subroutines/chat/en.yml
@@ -24,7 +24,7 @@ label:
   messages:
   - the assembler I found doesn't support that 😔
   - but I'm sure that's possible with other assemblers
-  - and they'd generate exactly the same binary code
+  - and ~JSR @init~ would generate the same machine code as ~JSR $4029~
   responses:
   - ...where
 
